--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="ambient-field" aria-hidden="true"></div>
     <nav class="section-nav" aria-label="Section shortcuts">
         <div class="section-nav-inner"></div>
     </nav>
@@ -33,7 +34,11 @@
             <section id="relay-live-card" class="card hero-live-card" data-accent="relay">
                 <div class="card-header">
                     <div class="card-title-group">
-                        <h2><span class="section-icon" aria-hidden="true">🔌</span>Connect to ChatScope Relay</h2>
+                    <h2><span class="section-icon" aria-hidden="true">
+                        <svg viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M8 3v2h8V3h2v2h1a2 2 0 0 1 2 2v4h-2V8H5v3H3V7a2 2 0 0 1 2-2h1V3h2zm-4 8h16v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-8zm4 2v6h2v-4h4v4h2v-6H8z"/>
+                        </svg>
+                    </span>Connect to ChatScope Relay</h2>
                         <p class="card-subtitle">Start the relay service to mirror your chats into ChatScope.</p>
                     </div>
                     <div class="card-header-actions">
@@ -183,7 +188,9 @@
         <section class="card full-span highlights" id="insight-highlights" data-nav-target="highlights" data-accent="highlights">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">✨</span>Highlights</h2>
+                    <h2><span class="section-icon" aria-hidden="true">
+                        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2l1.76 5.15L19 7.5l-4 3.34L16.5 16l-4.5-2.8L7.5 16 9 10.84 5 7.5l5.24-.35z"/></svg>
+                    </span>Highlights</h2>
                     <button type="button" class="card-toggle" aria-expanded="true" data-target="insight-highlights-content">▾</button>
                 </div>
             </div>
@@ -196,7 +203,7 @@
         <section class="card full-span participants" id="participants" data-nav-target="participants" data-accent="participants">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">👥</span>Participants</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5C15 14.17 10.33 13 8 13zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.96 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/></svg></span>Participants</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-participants">Download CSV</button>
                         <button type="button" class="card-toggle" aria-expanded="true" data-target="participants-content">▾</button>
@@ -236,7 +243,7 @@
         <section class="card full-span" id="hourly-activity" data-nav-target="hourly-activity" data-accent="hourly">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">🕒</span>Hourly Activity</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M11 7h2v6h-4v-2h2zm1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg></span>Hourly Activity</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-hourly">Download CSV</button>
                         <button type="button" class="card-toggle" aria-expanded="true" data-target="hourly-activity-content">▾</button>
@@ -285,7 +292,7 @@
         <section class="card full-span" id="daily-activity" data-nav-target="daily-activity" data-accent="daily">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">📅</span>Day by Day</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M7 10h5v5H7z" opacity=".3"/><path d="M19 3h-1V1h-2v2H8V1H6v2H5c-1.1 0-1.99.9-1.99 2L3 21a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5c0-1.1-.9-2-2-2zm0 18H5V8h14z"/></svg></span>Day by Day</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-daily">Download CSV</button>
                         <button type="button" class="card-toggle" aria-expanded="true" data-target="daily-activity-content">▾</button>
@@ -307,7 +314,7 @@
         <section class="card full-span" id="weekly-trend" data-nav-target="weekly-trend" data-accent="weekly">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">📈</span>Week by Week</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M9 16.17l-3.5-3.5-1.41 1.41L9 19 20.5 7.5 19.09 6z"/></svg></span>Week by Week</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-weekly">Download CSV</button>
                         <button type="button" class="card-toggle" aria-expanded="true" data-target="weekly-trend-content">▾</button>
@@ -338,7 +345,7 @@
         <section class="card full-span" id="weekday-trend" data-nav-target="weekday-trend" data-accent="weekday">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">🗓</span>Day of the Week</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M21 3h-3V1h-2v2H8V1H6v2H3a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h18a2 2 0 0 0 2-2V5c0-1.1-.9-2-2-2zm0 18H3V9h18zm0-14H3V5h18z"/></svg></span>Day of the Week</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-weekday">Download CSV</button>
                         <button type="button" class="card-toggle" aria-expanded="true" data-target="weekday-trend-content">▾</button>
@@ -391,7 +398,7 @@
         <section class="card full-span" id="timeofday-trend" data-nav-target="timeofday-trend" data-accent="timeofday">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">🌗</span>Time of Day</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M12 2a9.93 9.93 0 0 0-7.07 2.93A10 10 0 0 0 12 22a9.98 9.98 0 0 0 7.07-17.07A9.93 9.93 0 0 0 12 2zm0 18a8 8 0 0 1-5.66-13.66A7.96 7.96 0 0 1 12 4z"/></svg></span>Time of Day</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-timeofday">Download CSV</button>
                         <button type="button" class="card-toggle" aria-expanded="true" data-target="timeofday-trend-content">▾</button>
@@ -436,7 +443,7 @@
         <section class="card full-span sentiment" id="sentiment-overview" data-nav-target="sentiment-overview" data-accent="sentiment">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">😊</span>Mood</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 .001 20.001A10 10 0 0 0 12 2zm0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16zm4-9a1.5 1.5 0 1 0-1.5-1.5A1.5 1.5 0 0 0 16 11zm-8 0a1.5 1.5 0 1 0-1.5-1.5A1.5 1.5 0 0 0 8 11zm4 5.5a5.5 5.5 0 0 0 4.78-2.64l-1.7-1.06a3.5 3.5 0 0 1-6.17 0l-1.7 1.06A5.5 5.5 0 0 0 12 16.5z"/></svg></span>Mood</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-sentiment">Download CSV</button>
                         <button type="button" class="card-toggle" aria-expanded="true" data-target="sentiment-overview-content">▾</button>
@@ -472,7 +479,7 @@
         <section class="card full-span message-types" id="message-types" data-nav-target="message-types" data-accent="message-types">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">💬</span>Message Mix</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M20 2H4a2 2 0 0 0-2 2v18l4-4h14a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z"/></svg></span>Message Mix</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-message-types">Download CSV</button>
                         <button type="button" class="ghost-button" id="download-chat-json">Download chat JSON</button>
@@ -549,7 +556,7 @@
         <section class="card full-span" id="polls-card" data-nav-target="polls" data-accent="polls">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">📊</span>Polls</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M6 19h2V5H6zm5 6h2V2h-2zm5-11v13h2V14z"/></svg></span>Polls</h2>
                     <button type="button" class="card-toggle" aria-expanded="true" data-target="polls-content">▾</button>
                 </div>
             </div>
@@ -572,7 +579,7 @@
         <section class="card full-span saved-views" id="saved-views-card" data-nav-target="saved-views" data-accent="saved-views">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">💾</span>Saved Setups</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M17 3H5a2 2 0 0 0-2 2v14c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2V7zM7 5h7v4H7zm7 14H7v-6h7zm3-12h-2V5h1z"/></svg></span>Saved Setups</h2>
                     <button type="button" class="card-toggle" aria-expanded="true" data-target="saved-views-content">▾</button>
                 </div>
             </div>
@@ -611,7 +618,7 @@
         <section class="card full-span search-panel" id="search-panel" data-nav-target="search" data-accent="search">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">🔍</span>Search Messages</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6 6 0 1 0 14 15.5l.27.28v.79l5 5 1.5-1.5zm-5.5 0a4.5 4.5 0 1 1 0-9 4.5 4.5 0 0 1 0 9z"/></svg></span>Search Messages</h2>
                     <div class="card-header-actions">
                         <button type="button" class="ghost-button" id="download-search-results">Save CSV</button>
                         <button type="button" class="card-toggle" aria-expanded="true" data-target="search-panel-content">▾</button>
@@ -652,7 +659,7 @@
         <section class="card full-span" id="faq-card" data-nav-target="faq" data-accent="faq">
             <div class="card-header">
                 <div class="card-title-group">
-                    <h2><span class="section-icon" aria-hidden="true">❓</span>FAQ</h2>
+                    <h2><span class="section-icon" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M11 18h2v2h-2zm1-16a9 9 0 0 0-9 9h2a7 7 0 1 1 9.9 6.32l-.9.44V20h2v-1.1a9 9 0 0 0-4-17.9z"/></svg></span>FAQ</h2>
                     <button type="button" class="card-toggle" aria-expanded="true" data-target="faq-content">▾</button>
                 </div>
             </div>
